整体的样式1.5波

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -31,8 +31,8 @@ table.psvr{
 */
   width: 968px;text-align: left;margin: 0 auto;
 }
-#psvr_header, #psvr_midder, #psvr_footer {padding: 0px 15px;}
-#psvr_header {margin-bottom: 54px;padding-top:5px;} /*默认10px 导航下方间隔*/
+#psvr_header, #psvr_midder, #psvr_footer {padding: 0px;}
+#psvr_header {margin-bottom: 48px;padding-top:5px;} /*默认10px 导航下方间隔*/
 #psvr_midder {}
 #psvr_footer {}
 
@@ -320,13 +320,13 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   z-index:888;
 }
 #psvr_logimg{
-  #padding-top:3px}
+  margin-left:14px;
+}
 .psvr_wtf_scbar{
-  width:937px;
-  margin-left:15px;
+  width:966px;
   position:absolute;
   _position:absolute;
-  top:137px;
+  top:134px;
 }
 .psvr_wtf_logdiv{
   position:absolute;
@@ -342,7 +342,7 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
     width:958px;
   }
   .psvr_wtf_scbar{
-    top:138px;
+    top:135px;
   }
   #psvr_header, #psvr_midder, #psvr_footer{
     padding-right: 0;
