magic_encoding and fixes

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -32,7 +32,7 @@ table.psvr{
   width: 968px;text-align: left;margin: 0 auto;
 }
 #psvr_header, #psvr_midder, #psvr_footer {padding: 0px;}
-#psvr_header {margin-bottom: 48px;padding-top:5px;} /*默认10px 导航下方间隔*/
+#psvr_header {margin-bottom: 48px;padding:5px 14px 0 14px;} /*默认10px 导航下方间隔*/
 #psvr_midder {}
 #psvr_footer {}
 
@@ -320,10 +320,10 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   z-index:888;
 }
 #psvr_logimg{
-  margin-left:14px;
 }
 .psvr_wtf_scbar{
-  width:966px;
+  width:938px;
+  margin-left:14px;
   position:absolute;
   _position:absolute;
   top:134px;
