新帖->新课件

--- a/sub/simple/simple/template/default/common/module.css
+++ b/sub/simple/simple/template/default/common/module.css
@@ -423,7 +423,7 @@ Created & Modified by Monkey, Lushnis, Pony, Dfox & DragonLee.
 
 /*
 	Level:			Channel
-	Explain:		板块新帖提醒
+	Explain:		板块新课件提醒
 	Last Modify:	Max.Cong
 */
 	#forumnew{ position: absolute; right: 0; top: 0; z-index: -1; }
