--- a/sub/app/assets/stylesheets/application.css.scss.erb
+++ b/sub/app/assets/stylesheets/application.css.scss.erb
@@ -33,6 +33,15 @@ body{
 #chart{
   margin-bottom:8px;
 }
+.appl{
+  width:125px;
+}
+#psvr_footer{
+  width:968px;
+}
+#newspecial_menu{
+  display:none !important;
+}
 .ie6{
   #chart{
     margin-right:0px;
