--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -200,9 +200,9 @@
        <div class="bm_h">
          <h3>
            <strong><a href="home.php?mod=space&amp;do=friend&amp;view=online&amp;type=member">在线会员</a></strong>
-           <span class="xs1">- <strong>1</strong> 人在线
-             - <strong>1</strong> 会员(<strong>0</strong> 隐身),
-             <strong>0</strong> 位游客
+           <span class="xs1">- <strong><%= @session_count %></strong> 人在线
+             - <strong><%= @onlinelist_count %></strong> 会员(<strong>0</strong> 隐身),
+             <strong><%= @guest_count %></strong> 位游客
              - 最高记录是 <strong>2</strong> 于 <strong>2012-9-3</strong>.</span>
          </h3>
        </div>
