--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -137,45 +137,9 @@
                 <td class="scbar_hot_td">
                   <div id="scbar_hot">
                     <strong class="xw1">热搜: </strong>
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E6%95%99%E8%82%B2%E5%BF%83%E7%90%86%E5%AD%A6&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">教育心理学</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E9%A9%AC%E5%85%8B%E6%80%9D&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">马克思</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E6%AF%9B%E6%B3%BD%E4%B8%9C&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">毛泽东</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E9%AB%98%E7%AD%89%E6%95%B0%E5%AD%A6&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">高等数学</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E7%89%A9%E7%90%86&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">物理</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E8%BF%91%E4%BB%A3%E5%8F%B2&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">近代史</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E6%95%B0%E5%AD%A6%E5%88%86%E6%9E%90&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">数学分析</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E9%AB%98%E7%AD%89%E4%BB%A3%E6%95%B0&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">高等代数</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E5%A4%A7%E5%AD%A6%E8%8B%B1%E8%AF%AD&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">大学英语</a>
-
-
-
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=C%E8%AF%AD%E8%A8%80&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">C语言</a>
-
+                    <% @hotkeywords_list.each do |keyword| %>
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=<%= keyword %>&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch"><%= keyword %></a>
+                    <% end %>
                   </div>
                 </td>
               </tr>
