discuz开始使用云端asset

--- a/sub/simple/simple/template/default/common/footer.htm
+++ b/sub/simple/simple/template/default/common/footer.htm
@@ -135,7 +135,7 @@
 <script type="text/javascript">_attachEvent(window, 'scroll', function(){showTopLink();});</script>
 <!--{/if}-->
 <!--{eval output();}-->
-<script src="{echo asset_path('/application.js')}" type="text/javascript" type="text/javascript"></script>
+<script src="{echo asset_path('application.js')}" type="text/javascript" type="text/javascript"></script>
 <script type="text/javascript" charset="utf-8">
   window.psvr_bgImg = new Image();
   window.psvr_bgImg.onload = function() {
