--- a/sub/simple/simple/template/default/common/header.htm
+++ b/sub/simple/simple/template/default/common/header.htm
@@ -26,8 +26,8 @@
 	<!--{if $_GET['diy'] == 'yes' && check_diy_perm($topic)}-->
 	<link rel="stylesheet" type="text/css" id="diy_common" href="data_<!--{echo PSVR_KTV_SUB}-->/cache/style_{STYLEID}_css_diy.css?{VERHASH}" />
 	<!--{/if}-->
-  <script src="{echo asset_path('/modernizr.js')}" type="text/javascript" type="text/javascript"></script>
-  <link href="{echo asset_path('/application.css')}" media="all" rel="stylesheet" type="text/css" />
+  <script src="{echo asset_path('modernizr.js')}" type="text/javascript" type="text/javascript"></script>
+  <link href="{echo asset_path('application.css')}" media="all" rel="stylesheet" type="text/css" />
 </head>
 
 <body id="nv_{$_G[basescript]}" class="pg_{CURMODULE}{if $_G['basescript'] === 'portal' && CURMODULE === 'list' && !empty($cat)} {$cat['bodycss']}{/if}" onkeydown="if(event.keyCode==27) return false;">
