--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -89,7 +89,7 @@
             <% else %>
             <tr bgcolor="#ffffff" align="center">
                <td colspan="6" style="padding:22px 0">
-                  今天还没有人上传课件，<a href="#">[点击这里]</a>上传一个吧!
+                  今天还没有人上传课件，<a href="/simple/forum.php?mod=misc&action=nav" class="psvr_login_required" onclick="showWindow('nav', this.href, 'get', 0)">[点击这里]</a>上传一个吧!
                </td>
             </tr>
             <% end %>
