--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
     <div class="wp" style="padding:0">
       <div class="hdc cl psvr_wtf_logdiv">
         <% if !user_signed_in? %>
-        <script src="/simple/static/js/logging.js?tFF" type="text/javascript"></script>
-        <form method="post" autocomplete="off" id="lsform" action="/simple/member.php?mod=logging&amp;action=login&amp;loginsubmit=yes&amp;infloat=yes&amp;lssubmit=yes" onsubmit="return lsSubmit(null,'/simple/');">
+        <script src="/simple/static/js/logging.js" type="text/javascript"></script>
+        <form method="post" autocomplete="off" id="lsform" action="/simple/member.php?mod=logging&action=login&loginsubmit=yes&infloat=yes&lssubmit=yes" onsubmit="return lsSubmit(null,'/simple/');">
           <div class="fastlg cl y">
             <span id="return_ls" style="display:none"></span>
             <div class="pns">
@@ -93,13 +93,13 @@
           <% if @cur_newpm == 0 %>
             <a href="/simple/home.php?mod=space&do=pm" id="pm_ntc">消息</a>
           <% else %>
-            <a href="/simple/home.php?mod=space&amp;do=pm" id="pm_ntc" class="new">消息</a>
+            <a href="/simple/home.php?mod=space&do=pm" id="pm_ntc" class="new">消息</a>
           <% end %>
           <span class="pipe">|</span>
           <% if @cur_newprompt == 0 %>
             <a href="/simple/home.php?mod=space&do=notice" id="myprompt">提醒</a>
           <% else %>
-            <a href="/simple/home.php?mod=space&amp;do=notice" id="myprompt" class="new">提醒(<%= @cur_newprompt %>)</a>
+            <a href="/simple/home.php?mod=space&do=notice" id="myprompt" class="new">提醒(<%= @cur_newprompt %>)</a>
           <% end %>
           <span id="myprompt_check"></span>
           <% if ((@cur_allowpostarticle.nil? ? false : @cur_allowpostarticle.allowpostarticle) || (@cur_allowmanagearticle.nil? ? false : @cur_allowmanagearticle.allowmanage) || (@cur_allowdiy.nil? ? false : true) || (@cur_allowadmincp)) %>
@@ -111,7 +111,7 @@
           <% if @cur_allowadmincp%>
             <span class="pipe">|</span><a href="/simple/admin.php" target="_blank">管理中心</a>          
           <% end %>
-          <span class="pipe">|</span><a href="/simple/member.php?mod=logging&action=logout">退出</a>
+          <span class="pipe">|</span><a href="/simple/member.php?mod=logging&action=logout&formhash=<%=@formhash%>">退出</a>
           </p>
           <p>
           <a href="/simple/home.php?mod=spacecp&ac=credit&showcredit=1" id="extcreditmenu" onmouseover="delayShow(this, showCreditmenu);" class="showmenu">积分: <%= @cur_credits %></a>
@@ -138,7 +138,7 @@
                   <div id="scbar_hot">
                     <strong class="xw1">热搜: </strong>
                     <% @hotkeywords_list.each do |keyword| %>
-                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=<%= keyword %>&amp;formhash=<%=@formhash%>&amp;searchsubmit=true&amp;source=hotsearch"><%= keyword %></a>
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&srchtxt=<%= keyword %>&formhash=<%=@formhash%>&searchsubmit=true&source=hotsearch"><%= keyword %></a>
                     <% end %>
                   </div>
                 </td>
@@ -209,7 +209,7 @@
 <a onclick="setHomepage('http://<%=Setting.ktv_sub%>.kejian.tv/');" href="javascript:;" class="psvr">设为首页</a> |
         <a onclick="addFavorite(this.href, '<%= Setting.ktv_subname %>课件交流系统');return false;" href="http://<%=Setting.ktv_sub%>.kejian.tv/" class="psvr">收藏本站</a> |
         <a href="/simple/misc.php?mod=stat">站点统计</a> |
-        <a onclick="showWindow('miscreport', 'simple/misc.php?mod=report&amp;url='+REPORTURL);return false;" href="javascript:;">举报</a> |
+        <a onclick="showWindow('miscreport', 'simple/misc.php?mod=report&url='+REPORTURL);return false;" href="javascript:;">举报</a> |
         <a href="/simple/archiver/">简明版</a>
     </span>
 <span class="psvr"  style="float:right;margin-right:20px"><a class="psvr" href="#">背景图为<%= Setting.fotos[@bg_index] %>.</a></span>
