还没做完，吃饭去

--- a/sub/simple/simple/template/default/forum/post_forumselect.htm
+++ b/sub/simple/simple/template/default/forum/post_forumselect.htm
@@ -50,9 +50,8 @@
 </div>
 
 <script type="text/javascript" reload="1">
-vas s;
-s='<p><a class="pbsb lightlink" onclick="console.log(this)" href="javascript:;" id="commonforum">搜索结果</a></p>';
-var s += '<!--{if $commonfids}--><p><a id="commonforum" href="javascript:;" onclick="switchforums(this, 1, \'common\')" class="pbsb lightlink">{lang nav_forum_frequently}</a></p><!--{/if}-->';
+var s='<p><a class="pbsb lightlink" onclick="console.log(this)" href="javascript:;" id="commonforum">搜索结果</a></p>';
+s += '<!--{if $commonfids}--><p><a id="commonforum" href="javascript:;" onclick="switchforums(this, 1, \'common\')" class="pbsb lightlink">{lang nav_forum_frequently}</a></p><!--{/if}-->';
 var lis = $('fs_group').getElementsByTagName('LI');
 for(i = 0;i < lis.length;i++) {
 	var gid = lis[i].getAttribute('fid');
