定位课程搞定

--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -229,6 +229,7 @@
 <script type="text/javascript">_attachEvent(window, 'scroll', function(){showTopLink();});</script>
 </div>
 <%= javascript_include_tag "application" %>
+<%= javascript_include_tag "ui_orig" %>
 <script type="text/javascript" charset="utf-8">
 (function($){
   $(function(){
