--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -53,7 +53,7 @@ table.psvr{
 #psvr_user_login { margin-bottom:10px; vertical-align:middle;}
  #psvr_login_box{margin:auto auto auto 20px;}
   	.psvr_fixedheight { position:relative; height:25px;}
-	#psvr_user_login_position {width:100%; height:25px; border:1px solid #D8D8D8; background:#F8F8F8; z-index:99px; }
+	#psvr_user_login_position {width:100%; height:25px; border:1px solid #D8D8D8; background:#F8F8F8; z-index:99; }
 	#psvr_user_login #psvr_login_authcode_input { display:none; }
 	#psvr_login_authcode_img { position:absolute; left:60px; bottom:95px; }
 	#psvr_login_authcode_input a { color:#369;}
@@ -317,7 +317,7 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
 .psvr_box_r { float:right; }
 #psvr_logimg_a{
   position:relative;
-  z-index:888;
+  z-index:88;
 }
 #psvr_logimg{
 }
