--- a/sub/simple/simple/template/default/common/footer.htm
+++ b/sub/simple/simple/template/default/common/footer.htm
@@ -54,6 +54,14 @@
 	<!--{ad/cornerbanner/a_cn}-->
 
 	<!--{hook/global_footer}-->
+	<!--{eval updatesession();}-->
+	<!--{if $_G['uid'] && $_G['group']['allowinvisible']}-->
+		<script type="text/javascript">
+		var invisiblestatus = '<!--{if $_G['session']['invisible']}-->{lang login_invisible_mode}<!--{else}-->{lang login_normal_mode}<!--{/if}-->';
+		var loginstatusobj = $('loginstatusid');
+		if(loginstatusobj != undefined && loginstatusobj != null) loginstatusobj.innerHTML = invisiblestatus;
+		</script>
+	<!--{/if}-->
   <div id="psvr_footer">
     <div id="psvr_footer_top">
       <p class="psvr psvr_good_link">
