搜索进一步优化 for ie

--- a/sub/simple/simple/template/default/forum/post_forumselect.htm
+++ b/sub/simple/simple/template/default/forum/post_forumselect.htm
@@ -48,7 +48,7 @@
 	<ul class="pbl cl">
 		<li id="block_group" style="width:299px"></li>
 		<li id="block_forum" style="width:299px"></li>
-		<li id="block_search" style="width:299px;display:none"></li>
+    <li id="block_search" style="width:299px;display:none"><p>请在上面的搜索框中输入关键词，这里将立即显示结果</p></li>
 		<li id="block_subforum" style="display:none"></li>
 	</ul>
 </div>
