--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
       SITEURL = 'http://<%= Setting.ktv_subdomain %>/',
       JSPATH = '/simple/static/js/';
 </script>
+
 <script src="/simple/static/js/common.js" type="text/javascript"></script>
 <script src="/simple/static/js/forum.js" type="text/javascript"></script>
 <%= stylesheet_link_tag "application", :media => "all" %>
@@ -85,9 +86,11 @@
           <div class="avt y"><a href="/simple/home.php?mod=spacecp&ac=avatar"><img src="<%=UCenter.getdef('UC_API')%>/avatar.php?uid=<%=current_user.uid%>&size=small" /></a></div>
           <p>
           <strong class="vwmy"><a href="/simple/home.php?mod=space&uid=<%=current_user.uid%>" target="_blank" title="访问我的空间"><%=current_user.slug%></a></strong>
+          <% if @cur_allowpostarticle.nil? ? false : @cur_allowpostarticle.allowinvisible %>
           <span id="loginstatus">
-            <a id="loginstatusid" href="/simple/member.php?mod=switchstatus" title="切换在线状态" onclick="ajaxget(this.href, 'loginstatus');return false;" class="xi2"></a>
+          <a id="loginstatusid" href="/simple/member.php?mod=switchstatus" title="切换在线状态" onclick="ajaxget(this.href, 'loginstatus');return false;" class="xi2"></a>
           </span>
+          <% end %>
           <span class="pipe">|</span><a href="/simple/home.php?mod=spacecp">设置</a>
           <span class="pipe">|</span>
           <% if @cur_newpm == 0 %>
@@ -228,6 +231,12 @@
 <span id="scrolltop" onclick="window.scrollTo('0','0')">回顶部</span>
 <script type="text/javascript">_attachEvent(window, 'scroll', function(){showTopLink();});</script>
 </div>
+<script type="text/javascript">
+var invisiblestatus = '在线';
+var loginstatusobj = document.getElementById('loginstatusid');
+if(loginstatusobj != undefined && loginstatusobj != null) loginstatusobj.innerHTML = invisiblestatus;
+</script>
+
 <%= javascript_include_tag "application" %>
 <%= javascript_include_tag "ui_orig" %>
 <script type="text/javascript" charset="utf-8">
