--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -200,7 +200,7 @@
      <div id="online" class="bm oll">
        <div class="bm_h">
          <h3>
-           <strong><a href="home.php?mod=space&amp;do=friend&amp;view=online&amp;type=member">在线会员</a></strong>
+           <strong><a href="/simple/home.php?mod=space&amp;do=friend&amp;view=online&amp;type=member">在线会员</a></strong>
            <span class="xs1">- <strong><%= @session_count %></strong> 人在线
              - <strong><%= @onlinelist_count %></strong> 会员(<strong><%= @online_invisible_count %></strong> 隐身),
              <strong><%= @guest_count %></strong> 位游客
