log和tmp的目录修复了，继续爬虫

--- a/sub/app/views/courses/index.html.erb
+++ b/sub/app/views/courses/index.html.erb
@@ -18,7 +18,7 @@
 <!--seed_today-->
 
  
-<% @courses.all.each_with_index do |item,index| %>
+<% @courses.each_with_index do |item,index| %>
   <% teachers = []%>
   <% addr = []%>
   <%
