课程栏目合并，更好看的全部课程页面

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -333,7 +333,9 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   top:25px;
   width:953px;
 }
-
+.psvr_dptable{
+  margin-bottom:18px;
+}
 .ie7{
   .psvr_menu_in{margin-top:27px;}
 }
