--- a/sub/app/views/application/_psvr_navmenu.html.erb
+++ b/sub/app/views/application/_psvr_navmenu.html.erb
@@ -3,8 +3,7 @@
           <ul class="psvr" >
             <li class="psvr" style="height:37px">&nbsp;</li>
             <li class="psvr" ><a class="psvr <%= '/'==request.path ? 'psvr_now' : ''%>" href="/"><span class="psvr" >首页</span></a></li>
-            <li class="psvr" ><a class="psvr <%= '/courses'==request.path ? 'psvr_now' : ''%>" href="/courses"><span class="psvr" >本学期课程</span></a></li>
-            <li class="psvr" ><a class="psvr <%= '/un_courses'==request.path ? 'psvr_now' : ''%>" href="/un_courses"><span class="psvr" >本学期未开</span></a></li>
+            <li class="psvr" ><a class="psvr <%= '/courses'==request.path ? 'psvr_now' : ''%>" href="/courses"><span class="psvr" >全部课程</span></a></li>
           </ul>
         </div>
       </div>
