--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -215,15 +215,18 @@
          </dt>
          <dd class="ptm pbm">
          <ul class="cl">
-           <% @on_display.values.each do |online| %>
-            <% if !online[1][1] %>
-               <li title="时间:<%= Time.at(online[1][0]).strftime("%R") %>">
-               <img src="/simple/static/image/common/<%= online[2][1] %>" alt="icon" />
-               <a href="/simple/home.php?mod=space&amp;uid=<%= online[0][1] %>"><%= online[0][0] %></a>
-               </li>
-            <% end %>
+           <% if @on_display.empty? %>
+             <li style="width: auto">当前只有游客或隐身会员在线</li>
+           <% else %>
+             <% @on_display.values.each do |online| %>
+              <% if !online[1][1] %>
+                 <li title="时间:<%= Time.at(online[1][0]).strftime("%R") %>">
+                 <img src="/simple/static/image/common/<%= online[2][1] %>" alt="icon" />
+                 <a href="/simple/home.php?mod=space&amp;uid=<%= online[0][1] %>"><%= online[0][0] %></a>
+                 </li>
+              <% end %>
+             <% end %>
            <% end %>
-           
          </ul>
          </dd>
        </dl>
