--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -345,10 +345,13 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   }
   .psvr_wtf_scbar{
     top:135px;
+    margin-left:14px !important;
+    width:938px !important;
   }
   #psvr_header, #psvr_midder, #psvr_footer{
     padding-right: 0;
   }
+  #psvr_navmenu{margin-right:7px}
   #psvr_navmenu a.psvr_now{margin-right:1px}
   .psvr_menu_in{margin-top:-14px;}
   .psvr_div_2 {width: 466px;}
