--- a/sub/simple/simple/template/default/common/header.htm
+++ b/sub/simple/simple/template/default/common/header.htm
@@ -210,9 +210,8 @@
          <div id="psvr_navmenu" class="psvr_menu">
            <ul class="psvr">
              <li style="height:37px" class="psvr">&nbsp;</li>
-             <li class="psvr"><a href="/" class="psvr psvr_now"><span class="psvr">首页</span></a></li>
-             <li class="psvr"><a href="/courses" class="psvr "><span class="psvr">本学期课程</span></a></li>
-             <li class="psvr"><a href="/un_courses" class="psvr "><span class="psvr">本学期未开</span></a></li>
+             <li class="psvr"><a href="/" class="psvr"><span class="psvr">首页</span></a></li>
+             <li class="psvr"><a href="/courses" class="psvr "><span class="psvr">全部课程</span></a></li>
            </ul>
          </div>
        </div>
