--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -355,5 +355,6 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   #psvr_navmenu a.psvr_now{margin-right:1px}
   .psvr_menu_in{margin-top:-14px;}
   .psvr_div_2 {width: 466px;}
+  #psvr_footer_top{padding-right:12px;}
 }
 
