--- a/sub/simple/simple/template/default/common/header.htm
+++ b/sub/simple/simple/template/default/common/header.htm
@@ -211,7 +211,7 @@
            <ul class="psvr">
              <li style="height:37px" class="psvr">&nbsp;</li>
              <li class="psvr"><a href="/" class="psvr"><span class="psvr">首页</span></a></li>
-             <li class="psvr"><a href="/courses" class="psvr "><span class="psvr">全部课程</span></a></li>
+             <li class="psvr"><a href="/courses" class="psvr "><span class="psvr">所有课程</span></a></li>
            </ul>
          </div>
        </div>
